--- a/distdns/README
+++ b/distdns/README
@@ -1,3 +1,4 @@
 python starting point: http://code.activestate.com/recipes/491264-mini-fake-dns-server/
 c starting point: http://lordikc.free.fr/wordpress/?p=829
 ruby start point?: http://net-dns.rubyforge.org/
+perl start point ... *vomit*: http://www.net-dns.org/
