--- a/distdns/README
+++ b/distdns/README
@@ -1,3 +1,5 @@
 python starting point: http://code.activestate.com/recipes/491264-mini-fake-dns-server/
 c starting point: http://lordikc.free.fr/wordpress/?p=829
-ruby start point?: http://net-dns.rubyforge.org/
+ruby start point?: http://half-penny.org/computing/simple-ruby-dns-server
+
+potential language-agnostic solution: http://doc.powerdns.com/pipebackend-dynamic-resolution.html
