--- a/babeld/CHANGES
+++ b/babeld/CHANGES
@@ -1,3 +1,12 @@
+16 May 2011: babeld 1.1.1:
+
+  * Fixed two bugs in the message parser that could cause IPv4 updates to
+    get lost.
+  * Fixed a bug in the monitoring interface that could cause route ids
+    to change (thanks to Gabriel Kerneis).
+  * INCOMPATIBLE CHANGE: the default wired hello interval is now 4 seconds.
+  * Ported to Bionic libc.
+
 30 January 2011: babeld 1.1.0:
 
   * INCOMPATIBLE CHANGE: the UDP port number and multicast group have
